# LMSP

./: .gitignore  pyproject.toml  requirements.txt  vercel.json
api/: index.py
core/: settings.py  urls.py
courses/: models.py  urls.py  views.py
courses/management/commands/: seed_data.py
courses/migrations/: 0001_initial.py  0002_subject_note.py
courses/templates/courses/: ai_chat.html  course_detail.html  dashboard.html  home.html  lesson_detail.html
courses/templates/notes/: note_form.html  notes_list.html  subjects.html
scratch/: test_url.py
static/css/: style.css
templates/: base.html
templates/registration/: login.html  register.html
